[gd_scene load_steps=11 format=2]

[ext_resource path="res://GameFrontHUDRelated/Subs/AbilityPanel/LaunchBallPanel/Assets/LaunchBall_PlusSign_DisplayHUD.png" type="Texture" id=1]
[ext_resource path="res://GameFrontHUDRelated/Subs/AbilityPanel/LaunchBallPanel/Assets/LaunchBall_DisplayHud.png" type="Texture" id=2]
[ext_resource path="res://GameFrontHUDRelated/Subs/AbilityPanel/LaunchBallPanel/Assets/LaunchBall_SingleBall_DisplayHUD.png" type="Texture" id=3]
[ext_resource path="res://GameFrontHUDRelated/Subs/AbilityPanel/LaunchBallPanel/LaunchBallAbilityPanel.gd" type="Script" id=4]
[ext_resource path="res://GameFrontHUDRelated/Subs/AbilityPanel/LaunchBallPanel/Assets/LaunchBall_DisplayHud_WhiteCircles.png" type="Texture" id=5]
[ext_resource path="res://GameFrontHUDRelated/Subs/AbilityPanel/LaunchBallPanel/Assets/LaunchBall_SwapButton_Normal.png" type="Texture" id=6]
[ext_resource path="res://GameFrontHUDRelated/Subs/AbilityPanel/LaunchBallPanel/Assets/LaunchBall_SwapButton_Highlighted.png" type="Texture" id=7]
[ext_resource path="res://GameFrontHUDRelated/Subs/AbilityPanel/LaunchBallPanel/Assets/LaunchBall_AimMode_Omni.png" type="Texture" id=8]
[ext_resource path="res://GameFrontHUDRelated/Subs/AbilityPanel/LaunchBallPanel/Assets/LaunchBall_AimMode_NamePanel.png" type="Texture" id=9]
[ext_resource path="res://MiscRelated/FontRelated/FontRes/monogram_20.tres" type="DynamicFont" id=10]

[node name="LaunchBallAbilityPanel" type="MarginContainer"]
margin_right = 155.0
margin_bottom = 80.0
script = ExtResource( 4 )

[node name="FreeFormControl" type="Control" parent="."]
margin_right = 155.0
margin_bottom = 80.0

[node name="BackgroundWithCircles" type="TextureRect" parent="FreeFormControl"]
margin_right = 155.0
margin_bottom = 80.0
mouse_filter = 2
texture = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="FreeFormControl"]
margin_left = 16.0
margin_top = 16.0
margin_right = 171.0
margin_bottom = 96.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="HeaderLabel" type="Label" parent="FreeFormControl"]
margin_left = 82.0
margin_top = 45.0
margin_right = 128.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = ExtResource( 10 )
text = "Balls:"
align = 1

[node name="BallCountLabel" type="Label" parent="FreeFormControl"]
margin_left = 84.0
margin_top = 61.0
margin_right = 124.0
margin_bottom = 79.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = ExtResource( 10 )
text = "x"
align = 1

[node name="Ball03" type="TextureRect" parent="FreeFormControl"]
margin_left = 134.0
margin_top = 50.0
margin_right = 150.0
margin_bottom = 66.0
texture = ExtResource( 3 )

[node name="Ball02" type="TextureRect" parent="FreeFormControl"]
margin_left = 134.0
margin_top = 55.0
margin_right = 150.0
margin_bottom = 71.0
texture = ExtResource( 3 )

[node name="Ball01" type="TextureRect" parent="FreeFormControl"]
margin_left = 134.0
margin_top = 60.0
margin_right = 150.0
margin_bottom = 76.0
texture = ExtResource( 3 )

[node name="PlusSign" type="TextureRect" parent="FreeFormControl"]
margin_left = 138.0
margin_top = 45.0
margin_right = 146.0
margin_bottom = 53.0
texture = ExtResource( 1 )

[node name="ModeContainer" type="MarginContainer" parent="FreeFormControl"]
margin_left = 82.0
margin_top = 1.0
margin_right = 154.0
margin_bottom = 39.0
mouse_filter = 2

[node name="FreeFormControl" type="Control" parent="FreeFormControl/ModeContainer"]
margin_right = 72.0
margin_bottom = 38.0
mouse_filter = 2

[node name="SwapButton" type="TextureButton" parent="FreeFormControl/ModeContainer/FreeFormControl"]
margin_left = 1.0
margin_top = -7.0
margin_right = 21.0
margin_bottom = 13.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="AimModeIcon" type="TextureRect" parent="FreeFormControl/ModeContainer/FreeFormControl"]
margin_left = 1.0
margin_top = 17.0
margin_right = 21.0
margin_bottom = 37.0
texture = ExtResource( 8 )

[node name="AimModeNameBackground" type="TextureRect" parent="FreeFormControl/ModeContainer/FreeFormControl"]
margin_left = 28.0
margin_top = 16.0
margin_right = 73.0
margin_bottom = 37.0
mouse_filter = 2
texture = ExtResource( 9 )

[node name="AimModeLabel" type="Label" parent="FreeFormControl/ModeContainer/FreeFormControl"]
margin_left = 32.0
margin_top = 21.0
margin_right = 68.0
margin_bottom = 35.0
text = "Omni"
align = 1

[node name="PosOfCenterBall" type="Position2D" parent="FreeFormControl"]
position = Vector2( 39, 40 )

[connection signal="pressed" from="FreeFormControl/ModeContainer/FreeFormControl/SwapButton" to="." method="_on_SwapButton_pressed"]
